<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/menu"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/reels"
        android:title="@string/title_reels" />

    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/games"
        android:title="@string/title_games" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>