<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.haitomns.jiffy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.haitomns.jiffy.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.haitomns.jiffy.ui.notifications.NotificationsFragment"
        android:label="@string/title_reels"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.haitomns.jiffy.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.haitomns.jiffy.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.haitomns.jiffy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_menu_item"
        android:name="com.haitomns.jiffy.ui.menuItems.MenuItemFragment"
        android:label="@string/title_menu_item"
        tools:layout="@layout/fragment_menu_item" />

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="com.haitomns.jiffy.ui.restaurants.RestaurantsActivity"
        android:label="@string/title_restaurants"
        tools:layout="@layout/fragment_restaurants"/>
</navigation>