<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="@string/good_morning"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/plus_jakarta_sans_extrabold"
        android:text="@string/code_cartel"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/loction_style"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="@string/foodie_food"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_light"
        android:text="@string/don_t_know_what_to_eat"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/plus_jakarta_sans_extrabold"
        android:text="@string/offers"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/plus_jakarta_sans_extrabold"
        android:text="@string/trending"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/bro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/theGardens"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/the_gardens"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dum_biriyani"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/doko"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="264dp"
        android:layout_height="172dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/offer_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="264dp"
        android:layout_height="172dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/offer_2"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/loction_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/recommendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ai_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/bigMenu"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:src="@drawable/trending_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</androidx.constraintlayout.widget.ConstraintLayout>
